# blizzard-casc-extractor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HD_EXTRACTION_STATUS.md  LICENSE  README.md  build.rs  extract_tc_masks.py  test_list_anims.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: baseline.txt  extraction.rs
docs/: README.md  getting-started.md  sprite-reference.md  team-color.md  technical-guide.md  unity-guide.md
fallbacks/ui/: statbtnn.ui.json  statbtnp.ui.json  statbtnt.ui.json  statbtnz.ui.json  statdata.ui.json  statport.ui.json
lib/: README.md
mappings/: README.md  starcraft-remastered.yaml
scripts/: generate_image_map.py
src/: blte.rs  blte_enhanced.rs  casclib_ffi.rs  dds_converter.rs  fallbacks.rs  format_analyzer.rs  format_converter.rs  generators.rs  integration_tests.rs  lib.rs  main.rs  mapping.rs  palette.rs  pipeline.rs  research.rs
src/anim/: hd_parser.rs  mod.rs
src/casc/: casclib_ffi.rs  decrypt.rs  discovery.rs  encryption.rs  integration_properties.rs  mod.rs  navigator.rs  salsa20.rs
src/cli/: mod.rs
src/config/: mod.rs  profiles.rs
src/filter/: mod.rs
src/grp/: mod.rs
src/progress/: mod.rs
src/resolution/: mod.rs
src/sprite/: export.rs  mod.rs
src/validation/: byte_comparison.rs  error_reporting.rs  mod.rs  pipeline.rs  reference_validator.rs  regression_suite.rs  unity_import.rs  visual_validation.rs
tests/: anim_property_tests.rs  comprehensive_integration_tests.rs  grp_property_tests.proptest-regressions  grp_property_tests.rs  integration_test.rs  integration_tests.rs  property_test_generators.rs  regression_detection_tests.rs  unity_conversion_test.rs  unity_import_validation_tests.rs  unity_validation_integration_test.rs  validation_integration_test.rs  validation_pipeline_integration_test.rs
tests/common/: mod.rs
unity/: StarcraftAnimationCreator.cs  StarcraftSpriteImporter.cs
